[gd_scene load_steps=8 format=3 uid="uid://4yvcgwnkhyia"]

[ext_resource type="Script" uid="uid://yj42vt7oyrqw" path="res://scripts/story/story_dialog_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://8vo55rwlb5of" path="res://assets/images/story_background2.png" id="2"]
[ext_resource type="PackedScene" path="res://scenes/universal_tree_view.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_transparent"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info_bar"]
bg_color = Color(0.2, 0.3, 0.5, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialog_panel"]
bg_color = Color(0.1, 0.15, 0.3, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_message_input"]
bg_color = Color(0.9, 0.9, 0.9, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="StoryDialogPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.2)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_transparent")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LeftPanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="InfoBar" type="Panel" parent="Panel/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_info_bar")

[node name="InfoHBox" type="HBoxContainer" parent="Panel/HBoxContainer/LeftPanel/InfoBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0

[node name="StoryInfoLabel" type="TextEdit" parent="Panel/HBoxContainer/LeftPanel/InfoBar/InfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "故事信息："
editable = false
wrap_mode = 1

[node name="CreateCheckpointButton" type="Button" parent="Panel/HBoxContainer/LeftPanel/InfoBar/InfoHBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "创建存档点"

[node name="TreeView" parent="Panel/HBoxContainer/LeftPanel" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="DialogPanel" type="Panel" parent="Panel/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dialog_panel")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/RightPanel/DialogPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MessageContainer" type="VBoxContainer" parent="Panel/HBoxContainer/RightPanel/DialogPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="MessageInputPanel" type="Panel" parent="Panel/HBoxContainer/RightPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_message_input")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/RightPanel/MessageInputPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="MessageInput" type="TextEdit" parent="Panel/HBoxContainer/RightPanel/MessageInputPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入您的回复..."
wrap_mode = 1

[node name="SendButton" type="Button" parent="Panel/HBoxContainer/RightPanel/MessageInputPanel/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "发送"
